Add comprehensive README and protect sensitive credentials
Added detailed project documentation with installation instructions, usage guide, and project structure overview. Removed sensitive configuration files from tracking and created template files for setup. Updated .gitignore to prevent future credential leaks.

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,14 @@ Thumbs.db
 # Environment
 .env
 .venv
+
+# Sensitive Configuration Files (API keys, credentials)
+**/config.txt
+Milestone 3/.env
+Milestone 3/KnowledgeGraph/config.txt
+Milestone 2/config.txt
+
+# API Keys and Secrets
+*.key
+*.pem
+credentials.json
